# Rdr2AnimalTracker

./: .gitattributes  .gitignore  AnimalTracker.sln  AnimalsFinder.sln  CMakeLists.txt  LICENSE.txt  README.md  THIRD_PARTY_NOTICE.txt  conanfile.py
AnimalsFinder/: IniOptions.cpp  IniOptions.h  Pools.vcxproj  animalsFinder.cpp  animalsFinder.h  scriptmenu.cpp  scriptmenu.h
resources/AnimalTracker/: AnimalTracker.ini
resources/AnimalTracker/Langs/: cn.ini  de.ini  en.ini  eng.ini  ko.ini  kor.ini  ru.ini  rus.ini
resources/conan/: Release.profile
src/: AnimalFinder.cpp  AnimalInfo.cpp  AnimalMenu.cpp  AnimalTracker.cpp  AnimalTracker.vcxproj  AnimalTracker.vcxproj.filters  AnimalsFinder.cpp  AnimalsFinder.vcxproj  AnimalsFinder.vcxproj.filters  CMakeLists.txt  CategoryInfo.cpp  CategoryMenu.cpp  ColorRgba.cpp  DrawUtils.cpp  IniOptions.cpp  Keyboard.cpp  KeyboardState.cpp  MenuBase.cpp  MenuController.cpp  MenuInput.cpp  MenuItemAnimal.cpp  MenuItemBase.cpp  MenuItemCategory.cpp  MenuItemDefault.cpp  MenuItemFlush.cpp  MenuItemMenu.cpp  MenuItemTitle.cpp  QualityFilter.cpp  ScriptMenu.cpp  StringComparator.cpp  main.cpp
src/include/AnimalTracker/: AnimalFinder.h  AnimalInfo.h  AnimalMenu.h  AnimalTracker.h  ButtonMapping.h  Categories.h  CategoryInfo.h  CategoryMenu.h  ColorRgba.h  CreateMap.h  DrawUtils.h  EMenuItemType.h  IContainedInfo.h  IContainingInfo.h  IInfo.h  IInfoPersister.h  IMenu.h  IMenuItem.h  ISandwichedInfo.h  IniOptions.h  InputAction.h  Keyboard.h  KeyboardState.h  MenuBase.h  MenuController.h  MenuInput.h  MenuItemAnimal.h  MenuItemBase.h  MenuItemCategory.h  MenuItemDefault.h  MenuItemFlush.h  MenuItemMenu.h  MenuItemTitle.h  NamesInfo.h  QualityFilter.h  StringComparator.h
src/include/AnimalsFinder/: AnimalsFinder.h  ColorRgba.h  IniOptions.h  MenuBase.h  ScriptMenu.h  namesInfo.h
